syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerCharacterProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "common.proto" ;

message GetCharacterRequest {
	int32 uid = 1;
}

message GetCharacterResponse {
	Character character = 1;
}

message UpdateCharacterRequest {
	Character character = 1;
}

message CreateCharacterRequest {
	Character character = 1;
}

message CreateCharacterResponse {
	LoginCode code = 1;
}

message CharacterUnloadRequest {
	int32 uid = 1;
}

service ServerCharacterService {
	rpc getCharacter (GetCharacterRequest) returns (GetCharacterResponse) {}
	rpc updateCharacter(UpdateCharacterRequest) returns (CommonResponse) {}
	rpc createCharacter(CreateCharacterRequest) returns (CreateCharacterResponse) {}
	rpc characterUnload(CharacterUnloadRequest) returns (CommonResponse) {}
}