syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerGameProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "common.proto";

message UserArrivedRegionRequest {
	string gateHost = 1;
	int32 gatePort = 2;
	int32 uid = 3;
}

message UserArrivedRegionResponse {
	
}

message UserLeaveRegionRequest {
	int32 uid = 1;
}


/* Controls */
message CharacterMoveReq {
	int32 uid = 1;
	Position toPos = 2;
}


message GameServerPing {

}

message GameServerPong {

}


/* Services Definition */

service GameServerService {
	rpc receivePing (GameServerPing) returns (GameServerPong) {}
}

service UserRegionService {
	rpc userArrivedRegion (UserArrivedRegionRequest) returns (CommonResponse) {}
	rpc userLeaveRegion (UserLeaveRegionRequest) returns (CommonResponse) {}
}

service CharacterService {
	rpc moveTo (CharacterMoveReq) returns (CommonResponse) {}
}